--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,31 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
+ @article{Mart_n_Gonz_lez_2024, title={That kid is a grasshopper! Metaphor development from 3 to 9 years of age}, ISSN={1469-7602}, url={http://dx.doi.org/10.1017/S0305000924000187}, DOI={10.1017/s0305000924000187}, journal={Journal of Child Language}, publisher={Cambridge University Press (CUP)}, author={Martín-González, Isabel and R. Ronderos, Camilo and Castroviejo, Elena and Schroeder, Kristen and Lossius-Falkum, Ingrid and Vicente, Agustín}, year={2024}, month=may, pages={1–26} }
+,
+ @article{Ronderos_2024, title={When irony is faster than its literal control: The role of mindreading during irony comprehension.}, volume={50}, ISSN={0278-7393}, url={http://dx.doi.org/10.1037/XLM0001219}, DOI={10.1037/xlm0001219}, number={3}, journal={Journal of Experimental Psychology: Learning, Memory, and Cognition}, publisher={American Psychological Association (APA)}, author={Ronderos, Camilo R. and Tomlinson, John M. and Noveck, Ira}, year={2024}, month=mar, pages={509–522} }
+,
+ @article{Ronderos_2024, title={Straight enough: Deriving imprecise interpretations of maximum standard absolute adjectives}, volume={3}, ISSN={2767-0279}, url={http://dx.doi.org/10.5070/G60111411}, DOI={10.5070/g60111411}, number={1}, journal={Glossa Psycholinguistics}, publisher={California Digital Library (CDL)}, author={Ronderos, Camilo Rodríguez and Noveck, Ira and Lossius Falkum, Ingrid}, year={2024}, month=oct }
+,
+ @article{Ronderos_2024, title={Perceptual, Semantic, and Pragmatic Factors Affect the Derivation of Contrastive Inferences}, volume={8}, ISSN={2470-2986}, url={http://dx.doi.org/10.1162/opmi_a_00165}, DOI={10.1162/opmi_a_00165}, journal={Open Mind}, publisher={MIT Press}, author={Ronderos, Camilo R. and Aparicio, Helena and Long, Madeleine and Shukla, Vishakha and Jara-Ettinger, Julian and Rubio-Fernandez, Paula}, year={2024}, pages={1213–1227} }
+,
+ @article{Ronderos_2023, title={Anticipating theDamnReferent: How Comprehenders Rapidly Retrieve the Speaker’s Attitude When Processing Negative Expressive Adjectives}, volume={47}, ISSN={1551-6709}, url={http://dx.doi.org/10.1111/COGS.13295}, DOI={10.1111/cogs.13295}, number={5}, journal={Cognitive Science}, publisher={Wiley}, author={Ronderos, Camilo R. and Domaneschi, Filippo}, year={2023}, month=may }
+,
+ @article{Pescuma_2023, title={Situating language register across the ages, languages, modalities, and cultural aspects: Evidence from complementary methods}, volume={13}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2022.964658}, DOI={10.3389/fpsyg.2022.964658}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Pescuma, Valentina N. and Serova, Dina and Lukassek, Julia and Sauermann, Antje and Schäfer, Roland and Adli, Aria and Bildhauer, Felix and Egg, Markus and Hülk, Kristina and Ito, Aine and Jannedy, Stefanie and Kordoni, Valia and Kuehnast, Milena and Kutscher, Silvia and Lange, Robert and Lehmann, Nico and Liu, Mingya and Lütke, Beate and Maquate, Katja and Mooshammer, Christine and Mortezapour, Vahid and Müller, Stefan and Norde, Muriel and Pankratz, Elizabeth and Patarroyo, Angela G. and Pleşca, Ana-Maria and Ronderos, Camilo R. and Rotter, Stephanie and Sauerland, Uli and Schnelle, Gohar and Schulte, Britta and Schüppenhauer, Gediminas and Sell, Bianca Maria and Solt, Stephanie and Terada, Megumi and Tsiapou, Dimitra and Verhoeven, Elisabeth and Weirich, Melanie and Wiese, Heike and Zaruba, Kathy and Zeige, Lars Erik and Lüdeling, Anke and Knoeferle, Pia}, year={2023}, month=jan }
+,
+ @article{Ronderos_2023, title={Slowdowns in scalar implicature processing: Isolating the intention-reading costs in the Bott &amp; Noveck task}, volume={238}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/J.COGNITION.2023.105480}, DOI={10.1016/j.cognition.2023.105480}, journal={Cognition}, publisher={Elsevier BV}, author={Ronderos, Camilo R. and Noveck, Ira}, year={2023}, month=sep, pages={105480} }
+,
+ @article{Ronderos_2023, title={Suppression of literal meaning in single and extended metaphors}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2023.1135129}, DOI={10.3389/fpsyg.2023.1135129}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Ronderos, Camilo R. and Falkum, Ingrid Lossius}, year={2023}, month=mar }
+,
+ @article{Ronderos_2022, title={When sequence matters: the processing of contextually biased German verb–object metaphors}, volume={15}, ISSN={1866-9859}, url={http://dx.doi.org/10.1017/LANGCOG.2022.22}, DOI={10.1017/langcog.2022.22}, number={1}, journal={Language and Cognition}, publisher={Cambridge University Press (CUP)}, author={Ronderos, Camilo R. and Guerra, Ernesto and Knoeferle, Pia}, year={2022}, month=nov, pages={1–28} }
+,
+ @article{Khorsheed_2022, title={What second-language speakers can tell us about pragmatic processing}, volume={17}, ISSN={1932-6203}, url={http://dx.doi.org/10.1371/JOURNAL.PONE.0263724}, DOI={10.1371/journal.pone.0263724}, number={2}, journal={PLOS ONE}, publisher={Public Library of Science (PLoS)}, author={Khorsheed, Ahmed and Md. Rashid, Sabariah and Nimehchisalem, Vahid and Geok Imm, Lee and Price, Jessica and Ronderos, Camilo R.}, editor={Felser, Claudia}, year={2022}, month=feb, pages={e0263724} }
+,
+@article{Camilo_Rodriguez_Ronderos_167032649,
+title={Does intonation automatically strengthen scalar implicatures?},
+journal={Semantics and Pragmatics},
+author={Camilo Rodriguez Ronderos and Tomlinson, John Michael, Jr. and Ronderos, Camilo R.},
+year={2021}
+},
+ @article{Ronderos_2021, title={The Role of Literal Features During Processing of Novel Verbal Metaphors}, volume={11}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2020.556624}, DOI={10.3389/fpsyg.2020.556624}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Ronderos, Camilo R. and Guerra, Ernesto and Knoeferle, Pia}, year={2021}, month=jan }
+,
+ @article{Tomlinson_2021, title={Does intonation automatically strengthen scalar implicatures?}, volume={14}, ISSN={1937-8912}, url={http://dx.doi.org/10.3765/sp.14.4}, DOI={10.3765/sp.14.4}, number={4}, journal={Semantics and Pragmatics}, publisher={Linguistic Society of America}, author={Tomlinson, John Michael and Ronderos, Camilo R.}, year={2021}, month=may, pages={1–30} }
+,
+ @article{Rodriguez_Ronderos_2018, title={Eye Tracking During Visually Situated Language Comprehension: Flexibility and Limitations in Uncovering Visual Context Effects}, ISSN={1940-087X}, url={http://dx.doi.org/10.3791/57694}, DOI={10.3791/57694}, number={141}, journal={Journal of Visualized Experiments}, publisher={MyJove Corporation}, author={Rodriguez Ronderos, Camilo and Münster, Katja and Guerra, Ernesto and Kreysa, Helene and Rodríguez, Alba and Kröger, Julia and Kluth, Thomas and Burigo, Michele and Abashidze, Dato and Nunnemann, Eva and Knoeferle, Pia}, year={2018}, month=nov }
