--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,31 +1,38 @@
- @article{Mart_n_Gonz_lez_2024, title={That kid is a grasshopper! Metaphor development from 3 to 9 years of age}, ISSN={1469-7602}, url={http://dx.doi.org/10.1017/S0305000924000187}, DOI={10.1017/s0305000924000187}, journal={Journal of Child Language}, publisher={Cambridge University Press (CUP)}, author={Martín-González, Isabel and R. Ronderos, Camilo and Castroviejo, Elena and Schroeder, Kristen and Lossius-Falkum, Ingrid and Vicente, Agustín}, year={2024}, month=may, pages={1–26} }
+ @article{Martín_González_2024, title={That kid is a grasshopper! Metaphor development from 3 to 9 years of age}, ISSN={1469-7602}, url={http://dx.doi.org/10.1017/S0305000924000187}, DOI={10.1017/s0305000924000187}, journal={Journal of Child Language}, publisher={Cambridge University Press (CUP)}, author={Martín-González, Isabel and R. Ronderos, Camilo and Castroviejo, Elena and Schroeder, Kristen and Lossius-Falkum, Ingrid and Vicente, Agustín}, year={2024}, month=may, pages={1–26},  pdf={martin_etal2024.pdf}, osf={https://osf.io/2qfpx/} }
 ,
- @article{Ronderos_2024, title={When irony is faster than its literal control: The role of mindreading during irony comprehension.}, volume={50}, ISSN={0278-7393}, url={http://dx.doi.org/10.1037/XLM0001219}, DOI={10.1037/xlm0001219}, number={3}, journal={Journal of Experimental Psychology: Learning, Memory, and Cognition}, publisher={American Psychological Association (APA)}, author={Ronderos, Camilo R. and Tomlinson, John M. and Noveck, Ira}, year={2024}, month=mar, pages={509–522} }
+@article{pescuma2024register,
+  title={Register and morphosyntactic congruence during sentence processing in German: An eye-tracking study},
+  author={Pescuma, Valentina N and Maquate, Katja and Ronderos, Camilo R and Ito, Aine and Knoeferle, Pia},
+  journal={Acta Psychologica},
+  volume={251},
+  pages={104547},
+  year={2024},
+  publisher={Elsevier},
+  pdf={pescuma2024.pdf}, 
+  DOI={10.1016/j.actpsy.2024.104547},
+  osf={https://osf.io/gevmq/}
+}
 ,
- @article{Ronderos_2024, title={Straight enough: Deriving imprecise interpretations of maximum standard absolute adjectives}, volume={3}, ISSN={2767-0279}, url={http://dx.doi.org/10.5070/G60111411}, DOI={10.5070/g60111411}, number={1}, journal={Glossa Psycholinguistics}, publisher={California Digital Library (CDL)}, author={Ronderos, Camilo Rodríguez and Noveck, Ira and Lossius Falkum, Ingrid}, year={2024}, month=oct }
+ @article{Ronderos_2024, title={When irony is faster than its literal control: The role of mindreading during irony comprehension.}, volume={50}, ISSN={0278-7393}, url={http://dx.doi.org/10.1037/XLM0001219}, DOI={10.1037/xlm0001219}, number={3}, journal={Journal of Experimental Psychology: Learning, Memory, and Cognition}, publisher={American Psychological Association (APA)}, author={Ronderos, Camilo R. and Tomlinson, John M. and Noveck, Ira}, year={2024}, month=mar, pages={509–522},  pdf={RonderosTomlinsonNoveck2023.pdf}, osf={https://osf.io/vgkst/}}
 ,
- @article{Ronderos_2024, title={Perceptual, Semantic, and Pragmatic Factors Affect the Derivation of Contrastive Inferences}, volume={8}, ISSN={2470-2986}, url={http://dx.doi.org/10.1162/opmi_a_00165}, DOI={10.1162/opmi_a_00165}, journal={Open Mind}, publisher={MIT Press}, author={Ronderos, Camilo R. and Aparicio, Helena and Long, Madeleine and Shukla, Vishakha and Jara-Ettinger, Julian and Rubio-Fernandez, Paula}, year={2024}, pages={1213–1227} }
+ @article{Ronderos_2024, title={Straight enough: Deriving imprecise interpretations of maximum standard absolute adjectives}, volume={3}, ISSN={2767-0279}, url={http://dx.doi.org/10.5070/G60111411}, DOI={10.5070/g60111411}, number={1}, journal={Glossa Psycholinguistics}, publisher={California Digital Library (CDL)}, author={Ronderos, Camilo R. and Noveck, Ira and Lossius Falkum, Ingrid}, year={2024}, month=oct,  pdf={RonderosEtAl2024_glossa.pdf}, osf={https://osf.io/6gwdq/}}
 ,
- @article{Ronderos_2023, title={Anticipating theDamnReferent: How Comprehenders Rapidly Retrieve the Speaker’s Attitude When Processing Negative Expressive Adjectives}, volume={47}, ISSN={1551-6709}, url={http://dx.doi.org/10.1111/COGS.13295}, DOI={10.1111/cogs.13295}, number={5}, journal={Cognitive Science}, publisher={Wiley}, author={Ronderos, Camilo R. and Domaneschi, Filippo}, year={2023}, month=may }
+ @article{Ronderos_2024, title={Perceptual, Semantic, and Pragmatic Factors Affect the Derivation of Contrastive Inferences}, volume={8}, ISSN={2470-2986}, url={http://dx.doi.org/10.1162/opmi_a_00165}, DOI={10.1162/opmi_a_00165}, journal={Open Mind}, publisher={MIT Press}, author={Ronderos, Camilo R. and Aparicio, Helena and Long, Madeleine and Shukla, Vishakha and Jara-Ettinger, Julian and Rubio-Fernandez, Paula}, year={2024}, pages={1213–1227},  pdf={ronderos2024open.pdf}, osf={https://osf.io/apxtj/} }
 ,
- @article{Pescuma_2023, title={Situating language register across the ages, languages, modalities, and cultural aspects: Evidence from complementary methods}, volume={13}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2022.964658}, DOI={10.3389/fpsyg.2022.964658}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Pescuma, Valentina N. and Serova, Dina and Lukassek, Julia and Sauermann, Antje and Schäfer, Roland and Adli, Aria and Bildhauer, Felix and Egg, Markus and Hülk, Kristina and Ito, Aine and Jannedy, Stefanie and Kordoni, Valia and Kuehnast, Milena and Kutscher, Silvia and Lange, Robert and Lehmann, Nico and Liu, Mingya and Lütke, Beate and Maquate, Katja and Mooshammer, Christine and Mortezapour, Vahid and Müller, Stefan and Norde, Muriel and Pankratz, Elizabeth and Patarroyo, Angela G. and Pleşca, Ana-Maria and Ronderos, Camilo R. and Rotter, Stephanie and Sauerland, Uli and Schnelle, Gohar and Schulte, Britta and Schüppenhauer, Gediminas and Sell, Bianca Maria and Solt, Stephanie and Terada, Megumi and Tsiapou, Dimitra and Verhoeven, Elisabeth and Weirich, Melanie and Wiese, Heike and Zaruba, Kathy and Zeige, Lars Erik and Lüdeling, Anke and Knoeferle, Pia}, year={2023}, month=jan }
+ @article{Ronderos_2023, title={Anticipating the Damn Referent: How Comprehenders Rapidly Retrieve the Speaker’s Attitude When Processing Negative Expressive Adjectives}, volume={47}, ISSN={1551-6709}, url={http://dx.doi.org/10.1111/COGS.13295}, DOI={10.1111/cogs.13295}, number={5}, journal={Cognitive Science}, publisher={Wiley}, author={Ronderos, Camilo R. and Domaneschi, Filippo}, year={2023}, month=may,  pdf={RonderosDomaneschi2023.pdf}, osf={https://osf.io/dwc25/} }
 ,
- @article{Ronderos_2023, title={Slowdowns in scalar implicature processing: Isolating the intention-reading costs in the Bott &amp; Noveck task}, volume={238}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/J.COGNITION.2023.105480}, DOI={10.1016/j.cognition.2023.105480}, journal={Cognition}, publisher={Elsevier BV}, author={Ronderos, Camilo R. and Noveck, Ira}, year={2023}, month=sep, pages={105480} }
+ @article{Pescuma_2023, title={Situating language register across the ages, languages, modalities, and cultural aspects: Evidence from complementary methods}, volume={13}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2022.964658}, DOI={10.3389/fpsyg.2022.964658}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Pescuma, Valentina N. and Serova, Dina and Lukassek, Julia and Sauermann, Antje and Schäfer, Roland and Adli, Aria and Bildhauer, Felix and Egg, Markus and Hülk, Kristina and Ito, Aine and Jannedy, Stefanie and Kordoni, Valia and Kuehnast, Milena and Kutscher, Silvia and Lange, Robert and Lehmann, Nico and Liu, Mingya and Lütke, Beate and Maquate, Katja and Mooshammer, Christine and Mortezapour, Vahid and Müller, Stefan and Norde, Muriel and Pankratz, Elizabeth and Patarroyo, Angela G. and Pleşca, Ana-Maria and Ronderos, Camilo R. and Rotter, Stephanie and Sauerland, Uli and Schnelle, Gohar and Schulte, Britta and Schüppenhauer, Gediminas and Sell, Bianca Maria and Solt, Stephanie and Terada, Megumi and Tsiapou, Dimitra and Verhoeven, Elisabeth and Weirich, Melanie and Wiese, Heike and Zaruba, Kathy and Zeige, Lars Erik and Lüdeling, Anke and Knoeferle, Pia}, year={2023}, month=jan,  pdf={pescuma2023.pdf} }
 ,
- @article{Ronderos_2023, title={Suppression of literal meaning in single and extended metaphors}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2023.1135129}, DOI={10.3389/fpsyg.2023.1135129}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Ronderos, Camilo R. and Falkum, Ingrid Lossius}, year={2023}, month=mar }
+ @article{Ronderos_2023, title={Slowdowns in scalar implicature processing: Isolating the intention-reading costs in the Bott &amp; Noveck task}, volume={238}, ISSN={0010-0277}, url={http://dx.doi.org/10.1016/J.COGNITION.2023.105480}, DOI={10.1016/j.cognition.2023.105480}, journal={Cognition}, publisher={Elsevier BV}, author={Ronderos, Camilo R. and Noveck, Ira}, year={2023}, month=sep, pages={105480},  pdf={RonderosNoveck2023.pdf}, osf={https://osf.io/msjcq/}  }
 ,
- @article{Ronderos_2022, title={When sequence matters: the processing of contextually biased German verb–object metaphors}, volume={15}, ISSN={1866-9859}, url={http://dx.doi.org/10.1017/LANGCOG.2022.22}, DOI={10.1017/langcog.2022.22}, number={1}, journal={Language and Cognition}, publisher={Cambridge University Press (CUP)}, author={Ronderos, Camilo R. and Guerra, Ernesto and Knoeferle, Pia}, year={2022}, month=nov, pages={1–28} }
+ @article{Ronderos_2023, title={Suppression of literal meaning in single and extended metaphors}, volume={14}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2023.1135129}, DOI={10.3389/fpsyg.2023.1135129}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Ronderos, Camilo R. and Falkum, Ingrid Lossius}, year={2023}, month=mar,  pdf={RonderosFalkum2023.pdf}, osf={https://osf.io/eayj7/}  }
 ,
- @article{Khorsheed_2022, title={What second-language speakers can tell us about pragmatic processing}, volume={17}, ISSN={1932-6203}, url={http://dx.doi.org/10.1371/JOURNAL.PONE.0263724}, DOI={10.1371/journal.pone.0263724}, number={2}, journal={PLOS ONE}, publisher={Public Library of Science (PLoS)}, author={Khorsheed, Ahmed and Md. Rashid, Sabariah and Nimehchisalem, Vahid and Geok Imm, Lee and Price, Jessica and Ronderos, Camilo R.}, editor={Felser, Claudia}, year={2022}, month=feb, pages={e0263724} }
+ @article{Ronderos_2022, title={When sequence matters: the processing of contextually biased German verb–object metaphors}, volume={15}, ISSN={1866-9859}, url={http://dx.doi.org/10.1017/LANGCOG.2022.22}, DOI={10.1017/langcog.2022.22}, number={1}, journal={Language and Cognition}, publisher={Cambridge University Press (CUP)}, author={Ronderos, Camilo R. and Guerra, Ernesto and Knoeferle, Pia}, year={2022}, month=nov, pages={1–28},  pdf={RonderosGuerraKnoeferle2023.pdf}, osf={https://osf.io/85zwy/}  }
 ,
-@article{Camilo_Rodriguez_Ronderos_167032649,
-title={Does intonation automatically strengthen scalar implicatures?},
-journal={Semantics and Pragmatics},
-author={Camilo Rodriguez Ronderos and Tomlinson, John Michael, Jr. and Ronderos, Camilo R.},
-year={2021}
-},
- @article{Ronderos_2021, title={The Role of Literal Features During Processing of Novel Verbal Metaphors}, volume={11}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2020.556624}, DOI={10.3389/fpsyg.2020.556624}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Ronderos, Camilo R. and Guerra, Ernesto and Knoeferle, Pia}, year={2021}, month=jan }
+ @article{Khorsheed_2022, title={What second-language speakers can tell us about pragmatic processing}, volume={17}, ISSN={1932-6203}, url={http://dx.doi.org/10.1371/JOURNAL.PONE.0263724}, DOI={10.1371/journal.pone.0263724}, number={2}, journal={PLOS ONE}, publisher={Public Library of Science (PLoS)}, author={Khorsheed, Ahmed and Md. Rashid, Sabariah and Nimehchisalem, Vahid and Geok Imm, Lee and Price, Jessica and Ronderos, Camilo R.}, editor={Felser, Claudia}, year={2022}, month=feb, pages={e0263724},  pdf={khorsheed2022.pdf}, osf={khorsheed2022.pdf}, osf={https://osf.io/htejf/} }
 ,
- @article{Tomlinson_2021, title={Does intonation automatically strengthen scalar implicatures?}, volume={14}, ISSN={1937-8912}, url={http://dx.doi.org/10.3765/sp.14.4}, DOI={10.3765/sp.14.4}, number={4}, journal={Semantics and Pragmatics}, publisher={Linguistic Society of America}, author={Tomlinson, John Michael and Ronderos, Camilo R.}, year={2021}, month=may, pages={1–30} }
+ @article{Ronderos_2021, title={The Role of Literal Features During Processing of Novel Verbal Metaphors}, volume={11}, ISSN={1664-1078}, url={http://dx.doi.org/10.3389/FPSYG.2020.556624}, DOI={10.3389/fpsyg.2020.556624}, journal={Frontiers in Psychology}, publisher={Frontiers Media SA}, author={Ronderos, Camilo R. and Guerra, Ernesto and Knoeferle, Pia}, year={2021}, month=jan,  pdf={RonderosGuerraKnoeferle2021.pdf} }
+,
+ @article{Tomlinson_2021, title={Does intonation automatically strengthen scalar implicatures?}, volume={14}, ISSN={1937-8912}, url={http://dx.doi.org/10.3765/sp.14.4}, DOI={10.3765/sp.14.4}, number={4}, journal={Semantics and Pragmatics}, publisher={Linguistic Society of America}, author={Tomlinson, John Michael and Ronderos, Camilo R.}, year={2021}, month=may, pages={1–30},  pdf={TomlinsonRonderos2021.pdf}, osf={https://osf.io/85qav/}  }
 ,
  @article{Rodriguez_Ronderos_2018, title={Eye Tracking During Visually Situated Language Comprehension: Flexibility and Limitations in Uncovering Visual Context Effects}, ISSN={1940-087X}, url={http://dx.doi.org/10.3791/57694}, DOI={10.3791/57694}, number={141}, journal={Journal of Visualized Experiments}, publisher={MyJove Corporation}, author={Rodriguez Ronderos, Camilo and Münster, Katja and Guerra, Ernesto and Kreysa, Helene and Rodríguez, Alba and Kröger, Julia and Kluth, Thomas and Burigo, Michele and Abashidze, Dato and Nunnemann, Eva and Knoeferle, Pia}, year={2018}, month=nov }
