--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,29 @@
+@article{domaneschi2025eye,
+  title={Eye-tracking evidence for the causal-historical theory of reference: F. Domaneschi et al.},
+  author={Domaneschi, Filippo and D’Agruma, Nicol{\`o} and Vignolo, Massimiliano and Ronderos, Camilo R},
+  journal={Linguistics and Philosophy},
+  pages={1--30},
+  year={2025},
+      pdf={domaneschi2025.pdf},
+        DOI={10.1007/s10988-024-09427-3},
+          osf={https://osf.io/kgnte/},
+  publisher={Springer}
+}
+
+https://osf.io/kgnte/
+
+@article{palleschi2025living,
+  title={Living in the present-how referent lifetime influences processing of past, present (perfect), and future tenses},
+  author={Palleschi, Daniela and Ronderos, Camilo Rodr{\'\i}guez and Knoeferle, Pia and Camilo, R Ronderos and others},
+  journal={Glossa Psycholinguistics},
+  volume={4},
+  number={1},
+    osf={https://osf.io/6sra7/},
+      DOI={10.5070/G6011.19481},
+    pdf={palleschi2025.pdf},
+  year={2025}
+}
+
  @article{Martín_González_2024, title={That kid is a grasshopper! Metaphor development from 3 to 9 years of age}, ISSN={1469-7602}, url={http://dx.doi.org/10.1017/S0305000924000187}, DOI={10.1017/s0305000924000187}, journal={Journal of Child Language}, publisher={Cambridge University Press (CUP)}, author={Martín-González, Isabel and R. Ronderos, Camilo and Castroviejo, Elena and Schroeder, Kristen and Lossius-Falkum, Ingrid and Vicente, Agustín}, year={2024}, month=may, pages={1–26},  pdf={martin_etal2024.pdf}, osf={https://osf.io/2qfpx/} }
 ,
 @article{pescuma2024register,
