--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,17 @@
+@article{ronderos2025social,
+  title={The social dimension of mindreading: developmental evidence for the role of social categorization during utterance interpretation},
+  author={Ronderos, Camilo R and Iversen, Rebecca and Noveck, Ira and Falkum, Ingrid},
+  journal={Philosophical Transactions B},
+  volume={380},
+  number={1932},
+  pages={20230493},
+  year={2025},
+       pdf={Ronderos2025.pdf},
+        DOI={10.1098/rstb.2023.0493},
+          osf={https://osf.io/2y6cf/},
+  publisher={The Royal Society}
+}
+
 @article{domaneschi2025eye,
   title={Eye-tracking evidence for the causal-historical theory of reference: F. Domaneschi et al.},
   author={Domaneschi, Filippo and D’Agruma, Nicol{\`o} and Vignolo, Massimiliano and Ronderos, Camilo R},
@@ -10,7 +24,6 @@
   publisher={Springer}
 }
 
-https://osf.io/kgnte/
 
 @article{palleschi2025living,
   title={Living in the present-how referent lifetime influences processing of past, present (perfect), and future tenses},
